results/SVCOMP/conversational/log-StringConstructors02-2024_03_16_20_43_38.txt
public class StringConstructors02 {
    //@ requires arg != null;
    //@ ensures \result <==> new String().equals(arg);
    public static boolean f(String arg) {
        String s1 = new String();
        return s1.equals(arg);
    }
}
/home/max/Documents/JMLGPT/tmp/StringConstructors02.java:3: error: Object allocation is not permitted in specification expressions
    //@ ensures \result <==> new String().equals(arg);
                             ^
1 error

public class StringConstructors02 {
    //@ requires arg != null;
    //@ ensures \result <==> arg.equals("");
    public static boolean f(String arg) {
        String s1 = new String();
        return s1.equals(arg);
    }
}

